re PR tree-optimization/26672 (ICE in op_iter_init, triggered by printf->puts optimization)

2006-03-14  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/26672
	* tree-ssa-propagate.c (set_rhs): Don't walk DEFs if not in
	SSA form.

	* gcc.dg/torture/pr26672.c: New testcase.

From-SVN: r112050